implementing a database with sql alchemy

--- a/recording/Makefile
+++ b/recording/Makefile
@@ -2,4 +2,4 @@ start:
 	docker run -p 5005:5000 -w /app -v "$$(pwd):/app" flask-api
 
 build:
-	docker build -t flask-smorest-api .
+	docker build -t flask-api .
